--- a/my-app/src/app.css
+++ b/my-app/src/app.css
@@ -6,7 +6,7 @@ body{
     margin: 0;
     width: 100vw;
     height: 100vh;
-    background: linear-gradient(to right,#1e3a8a,#1d4ed8);
+    background: linear-gradient(to right,#ce0e2d,#7f1d1d);
 }
 
 
