--- a/my-app/src/components/input/input.css
+++ b/my-app/src/components/input/input.css
@@ -4,9 +4,19 @@
     height: 30px;
     outline: none;
     border-radius: 10px;
-    border: 1px solid #1e3a8a;
+    border: 2px solid #ce0e2d;
     background-color: transparent;
     padding-left: 20px ;
     box-sizing: border-box;
     margin: 10px 0;
+    transition: 0.5s all;
+}
+
+.custom-input:hover,.custom-input:focus{
+    background-color: #ce0e2d;
+    color: white;
+}
+
+.custom-input:focus::placeholder,.custom-input:hover::placeholder{
+    color: white;
 }
